# py-uv-devcontainer

./: .gitignore  README.md  load_env.sh  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  post-create.sh
